Fix episode cover art responsive layout on mobile
Agent-Logs-Url: https://github.com/a11yrules/the-work-between/sessions/5af4282e-ba8b-4e16-b758-ce11ca534f97

--- a/style.scss
+++ b/style.scss
@@ -999,6 +999,11 @@ nav[aria-label="Jump to letter"] li:after{
   display: flex;
   justify-content: center;
   margin-block: 2vh;
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .episode-meta ul {
